[package]
name = "commands-chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
execute = "0.2.13"
winapi = { version = "0.3.9", features = ["wincon"] }
